# Themis

./: .env.example  .gitignore  README.md  docker-compose.certs.yml  docker-compose.https.yml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.yml  updates.md  vendor_profiles.toml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_devices.sql  20240101000003_create_changes.sql  20240101000004_create_approvals.sql  20240101000005_create_golden_configs.sql  20240101000006_add_ssh_fields.sql  20240101000007_add_config_pull_command.sql  20240101000008_add_updated_at_to_changes.sql  20240101000009_create_app_settings.sql  20240101000010_add_scheduling_and_batches.sql  20240101000011_add_batch_deploy_concurrency.sql  20240101000012_promote_first_user_to_admin.sql  20240101000013_add_ssh_options.sql  20240101000014_create_change_comments.sql  20240101000015_add_comment_threads_and_mentions.sql  20240101000016_create_deployment_attempts.sql  20240101000017_default_golden_pull.sql  20240101000018_add_os_drop_device_type.sql  20240101000019_create_config_drift.sql  20240101000020_add_device_tags.sql  20240101000021_rbac_settings.sql  20240101000022_ad_auth_settings.sql  20240101000023_oauth_settings.sql  20240101000024_scale_indexes_and_drift_concurrency.sql  20240101000025_drop_hostname.sql  20240101000026_device_deploy_lock.sql  20240101000027_rollback_guard_minutes.sql  20240101000028_device_sites_and_tag_catalog.sql  20240101000029_create_device_sites.sql
backend/src/: auth.rs  config.rs  ssh.rs  (+8 more)
(+79 files in other folders)
