[package]
name = "themis-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "themis-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
ssh2 = "0.9"
tokio-stream = "0.1"
toml = "0.8"
urlencoding = "2"
zip = "2"
